added 2nd collection and try/catch blocks
