# utilities/validate.js
@@ -24,6 +24,30 @@ const savePlayer = (req, res, next) => {
   });
 };
 
+const saveStaff = (req, res, next) => {
+  const staffSchema = {
+    name: "required|string",
+    age: "required|integer",
+    rating: "required|integer",
+    position: "required|string",
+    team: "required|string",
+    trophies: "required|integer",
+  };
+
+  validator(req.body, staffSchema, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: "Validation failed",
+        data: err,
+      });
+    } else {
+      next();
+    }
+  });
+};
+
 module.exports = {
   savePlayer,
+  saveStaff,
 };
